# zeta-mysql-compat

./: CONTRIBUTING.md  NOTICE  README.md
.github/workflows/: ci.yml
runner/: Cargo.toml
runner/src/: harness.rs  main.rs  slt_runner.rs
tests/: skip_list.toml
tests/zeta/: aggregates.slt  alter_table.slt  case_when.slt  constraints.slt  cte.slt  datetime_functions.slt  ddl_crud.slt  distinct_limit.slt  explain.slt  indexes.slt  information_schema.slt  joins.slt  jsonb.slt  math_functions.slt  null_semantics.slt  savepoints.slt  select_basic.slt  set_ops.slt  show_describe.slt  show_index.slt  string_functions_extended.slt  subqueries.slt  temp_tables.slt  txn.slt  types_datetime.slt  types_numeric.slt  types_string.slt  update_delete_join.slt  upsert.slt  views.slt  window.slt
